# https-github.com-moxskull-NoCheatZ-4

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  ISSUE_TEMPLATE.md  Performance2.psess  README.md  appveyor.yml  nocheatz.sln
server-plugin/: .gitignore  CMakeLists.txt  Makefile  nocheatz.vcxproj  nocheatz.vcxproj.filters
server-plugin/Code/: .gitignore  MagicValues.h  Preprocessors.h  plugin.cpp  plugin.h  version.cpp  version.h  vtabledumphelper.cpp  vtabledumphelper.h
server-plugin/Code/Hooks/: ConCommandHookListener.cpp  ConCommandHookListener.h  DearMetamodSource.cpp  DearMetamodSource.h  Hook.cpp  Hook.h  OnGroundHookListener.cpp  OnGroundHookListener.h  PlayerRunCommandHookListener.cpp  PlayerRunCommandHookListener.h  RayTraceCache.cpp  RayTraceCache.h  SetTransmitHookListener.cpp  SetTransmitHookListener.h  SigScan.cpp  SigScan.h  ThinkPostHookListener.cpp  ThinkPostHookListener.h  UserMessageHookListener.cpp  UserMessageHookListener.h  WeaponHookListener.cpp  WeaponHookListener.h  temp_HookGuard.h  temp_HookListenersList.h  temp_vtablehook.h
server-plugin/Code/Misc/: ClassSpecifications.h  EntityProps.cpp  EntityProps.h  ForwardedCommonDefinitions.h  HeapMemoryManager.cpp  HeapMemoryManager.h  Helpers.cpp  Helpers.h  MRecipientFilter.cpp  MRecipientFilter.h  MathCache.cpp  MathCache.h  QueryCvarProvider.cpp  QueryCvarProvider.h  SigHandler.cpp  SigHandler.h  StackWalker.cpp  StackWalker.h  SvClientsProvider.h  Tier0Linker.cpp  Tier0Linker.h  UserMsg.h  include_windows_headers.h  temp_BaseDataStruct.h  temp_Metrics.h  temp_Throwback.h  temp_basiclist.h  temp_basicstring.h  temp_singleton.h
server-plugin/Code/Players/: NczFilteredPlayersList.cpp  NczFilteredPlayersList.h  NczPlayer.cpp  NczPlayer.h  NczPlayerManager.cpp  NczPlayerManager.h  PlayerHandler_impl.h  ProcessFilter.h  temp_PlayerDataStruct.h
server-plugin/Code/Systems/: AutoTVRecord.cpp  AutoTVRecord.h  BanRequest.cpp  BanRequest.h  BaseSystem.cpp  BaseSystem.h  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  OnFrameListener.cpp  OnFrameListener.h  OnTickListener.cpp  OnTickListener.h  TimerListener.cpp  TimerListener.h  i18nManager.h
server-plugin/Code/Systems/Blockers/: AntiFlashbangBlocker.cpp  AntiFlashbangBlocker.h  AntiSmokeBlocker.cpp  AntiSmokeBlocker.h  BadUserCmdBlocker.cpp  BadUserCmdBlocker.h  BhopBlocker.cpp  BhopBlocker.h  RadarHackBlocker.cpp  RadarHackBlocker.h  WallhackBlocker.cpp  WallhackBlocker.h
server-plugin/Code/Systems/Solvers/: Events.h  Solver1.cpp  Solver1.h
server-plugin/Code/Systems/Testers/: AimTester.cpp  AimTester.h  AutoAttackTester.cpp  AutoAttackTester.h  AutoStrafeTester.cpp  AutoStrafeTester.h  BadUserCmdTester.cpp  BadUserCmdTester.h  ConCommandTester.cpp  ConCommandTester.h  ConVarTester.cpp  ConVarTester.h  EyeAnglesTester.cpp  EyeAnglesTester.h  JumpTester.cpp  JumpTester.h  MouseTester.cpp  MouseTester.h  ShotTester.cpp  ShotTester.h  SpamChangeNameTester.cpp  (+7 more)
server-plugin/Res/: config.ini  nocheatz-CSGO.cfg  nocheatz.cfg
server-plugin/unit-tests/: .gitignore  unit-tests.cpp  unit-tests.vcxproj  unit-tests.vcxproj.filters
(+12 files in other folders)
